Feat: youtube api 사용해서 날씨 기준으로 플레이리스트 추천

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -323,6 +323,7 @@
 
             <!-- 플레이리스트 카드들 (그리드 형태) -->
             <GridLayout
+                android:id="@+id/playlistGrid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:columnCount="2"
