--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -34,7 +34,7 @@
             android:id="@+id/search_button"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/search"
+            android:src="@drawable/ic_search"
             android:layout_alignParentRight="true"
             android:padding="5dp" />
 
