feat: 날씨알림 스위치 기능 구현

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
 
             <!-- 날씨 변화 알림 카드 -->
             <androidx.cardview.widget.CardView
+                android:id="@+id/weatherAlertCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
